# Baremetal-NN

./: .gitignore  Benchmark.md  CMakeLists.txt  LICENSE  README.md  k230-gcc.cmake  riscv-gcc.cmake  run.py
example/cnn/: CMakeLists.txt  CMakeLists_rv.txt  README.md  htif.ld  main.c  model.h  model.pth
example/cnn/scripts/: run.py
example/fast-depth/: CMakeLists.txt  README.md  main.c  model.h  process_input.py  riscv-gcc.cmake  termimg.h  x86-gcc.cmake
example/fast-depth/scripts/: convert_input.py  process_input.py  run.py
example/stereo-block-matching/: CMakeLists.txt  main.c  termimg.h
examples/diffuse-loco/: CMakeLists.txt  README.md  main.c  model.h  test_attn.py
examples/fast-depth/: CMakeLists.txt  README.md  htif.ld  main.c  model.h
examples/fast-depth/scripts/: convert_model.py
examples/llama2/: CMakeLists.txt  README.md  htif.ld  main.c
examples/mlp/: CMakeLists.txt  main.c  model.h
examples/mlp-cartpole/: CMakeLists.txt  model.h
examples/mlp-flappy/: CMakeLists.txt  README.md  main.c  model.h  policy.pt  run.py
examples/mlp-flappy/scripts/: run.py
examples/mlp-ppo/: CMakeLists.txt  main.c  model.h  simple_converter.py  udp.h
examples/mlp-ppo/scripts/: convert.py  train.py
examples/mlp-rsl_rl/: CMakeLists.txt  README.md  main.c  model.h  policy.pt  run.py
examples/mlp-simple/: CMakeLists.txt  README.md  main.c  model.h  run.py
examples/mlp/scripts/: run.py
examples/mnist/: CMakeLists.txt  main.c  model.h  model.pth
examples/mnist/scripts/: model.py  train.py
examples/simple/: CMakeLists.txt  README.md  main.c  model.pth
examples/simple/scripts/: run.py
examples/stereo-block-matching/: CMakeLists.txt  README.md  main.c
nn/: CMakeLists.txt  float16.h  metal.h  nn.h  nn_f16.h  nn_f32.h  nn_float16.h  nn_i32.h  nn_math.h  nn_tensor.h  nn_todo  riscv.h  tensor.h
nn/add/: nn_add.c  nn_add.h
nn/functional/: abs.h  add.c  add.h  batch_norm2d.h  clip.h  conv2d.c  conv2d.h  copy.c  div.c  div.h  elu.c  elu.h  fill.h  interpolate.h  layer_norm.h  linear.c  linear.h  matmul.h  max.c  max.h  max_pool2d.h  maximum.h  min.c  min.h  minimum.h  mm.c  mm.h  mul.h  mv.h  neg.c  neg.h  nn_abs.c  nn_abs.h  nn_add.c  nn_add.h  nn_attention.c  nn_batch_norm2d.c  nn_batch_norm2d.h  nn_clip.c  nn_clip.h  (+75 more)
nn/impl/: abs.h  acc.h  acc1.h  add.h  add1.h  div.h  dot.h  fill.h  log.h  max.h  maximum.h  maximum1.h  min.h  minimum.h  minimum1.h  mul.h  mul1.h  neg.h  norm.h  rms_norm.h  rmsnorm.h  sgn.h  softmax.h  sqr.h  sqrt.h  sub.h  sum.h  transpose.h
nn/impl/avx/: abs.c
nn/impl/cpu/: abs.c  acc.c  acc1.c  add.c  add1.c  div.c  dot.c  fill.c  log.c  max.c  maximum.c  maximum1.c  min.c  minimum.c  minimum1.c  mul.c  mul1.c  neg.c  norm.c  rms_norm.c  rmsnorm.c  sgn.c  softmax.c  sqr.c  sqrt.c  sub.c  sum.c  transpose.c
nn/impl/gemmini/: gemmini.h  mm.c  mm.h
nn/impl/rvv/: abs.c  acc.c  acc1.c  add.c  add1.S  add1.c  div.c  dot.c  fill.c  max.c  maximum.c  maximum1.c  min.c  minimum.c  minimum1.c  mul.c  mul1.c  neg.c  rms_norm.c  sub.c  transpose.c
nn/inc/: nn.h  nn_abs.h  nn_add.h  nn_batch_norm2d.h  nn_batchnorm2d.h  nn_clip.h  nn_conv2d.h  nn_copy.h  nn_div.h  nn_elu.h  nn_fill.h  nn_float16.h  nn_interpolate.h  nn_layer_norm.h  nn_layernorm.h  nn_linear.h  nn_math.h  nn_matmul.h  nn_matrixnorm.h  nn_max.h  nn_max_pool2d.h  nn_maximum.h  nn_maxpool2d.h  nn_min.h  nn_minimum.h  nn_mul.h  nn_multiply.h  nn_neg.h  nn_print.h  nn_relu.h  nn_relu6.h  nn_softmax.h  nn_sub.h  nn_sum.h  nn_tensor.h  nn_transpose.h  nn_types.h  rv.h
nn/inc/gemmini/: gemmini.h  gemmini_params.h
nn/inc/kernel/: acc.h  add.h  div.h  maximum1.h  mul1.h  neg.h  sqrt.h  sum.h
nn/inc/ops/: abs.h  acc.h  acc1.h  add.h  add1.h  div.h  dot.h  fill.h  log.h  max.h  maximum.h  maximum1.h  min.h  minimum.h  minimum1.h  mul.h  mul1.h  neg.h  norm.h  rmsnorm.h  sgn.h  softmax.h  sqr.h  sub.h  sum.h  transpose.h
nn/kernel/: acc.h  acc1.h  add.h  add1.h  addmm.h  div.h  dot.h  fill.h  max.h  maximum.h  maximum1.h  min.h  minimum.h  minimum1.h  mul.h  mul1.h  norm.h  sgn.h  softmax.h  sqrt.h  sub.h  sum.h
nn/kernel/cpu/: abs.c  acc.c  acc1.c  add.c  add1.c  addmm.c  div.c  dot.c  fill.c  log.c  max.c  maximum.c  maximum1.c  min.c  minimum.c  minimum1.c  mm.c  mul.c  mul1.c  neg.c  norm.c  rms_norm.c  sgn.c  softmax.c  sqr.c  sqrt.c  sub.c  sum.c  transpose.c
nn/kernel/gemmini/: mm.c  mm.h
nn/kernel/rvv/: abs.c  acc.c  acc1.c  add.c  add1.c  addmm.c  div.c  dot.c  fill.c  max.c  maximum.c  maximum1.c  min.c  minimum.c  minimum1.c  mul.c  mul1.c  neg.c  riscv_vector.h  rms_norm.c  (+2 more)
nn/layer/: abs.c  abs.h  add.h  clip.h  conv2d.c  copy.h  div.h  fill.h  interpolate.c  layer_norm.c  layer_norm.h  matmul.c  max.h  maximum.h  min.h  minimum.h  mm.h  mul.h  mv.c  mv.h  neg.h  print.h  relu.h  relu6.h  rms_norm.c  rms_norm.h  silu.h  softmax.c  softmax.h  sub.h  sum.h  transpose.h
nn/op/: nn.h  nn_add.c  nn_cast.c  nn_clip.c  nn_conv2d.h  nn_copy.h  nn_div.h  nn_fill.c  nn_fill.h  nn_float16.h  nn_layer_norm.c  nn_layer_norm.h  nn_linear.c  nn_linear.h  nn_math.h  nn_matmul.h  nn_max_pool2d.c  nn_maximum.c  nn_maximum.h  nn_min.c  nn_min.h  nn_minimum.c  nn_mm.c  nn_mm.h  nn_norm.c  nn_print.h  nn_relu6.c  nn_softmax.c  nn_softmax.h  nn_sub.c  nn_sum.c  nn_sum.h  nn_tensor.h  nn_tensor_creation.c  nn_tensor_creation.h  nn_transpose.h
nn/ops/: abs.h  acc1.h  addmm.h  log.h  min.h  mm.h  neg.h  sqr.h  sub.h  transpose.h
nn/relu/: nn_relu.c  nn_relu.h
nn/src/: nn_abs.c  nn_add.c  nn_attention.c  nn_batchnorm2d.c  nn_clip.c  nn_conv2d.c  nn_div.c  nn_elu.c  nn_fill.c  nn_im2col.c  nn_interpolate.c  nn_layernorm.c  nn_linear.c  nn_matmul.c  nn_matrixnorm.c  nn_max.c  nn_maximum.c  nn_maxpool2d.c  nn_min.c  nn_minimum.c  nn_mul.c  nn_neg.c  nn_print.c  nn_relu.c  nn_relu6.c  nn_softmax.c  nn_sub.c  nn_sum.c  nn_tensor.c  nn_transpose.c  nn_unfold.c
nn/transpose/: nn_transpose.h
tests/: CMakeLists.txt  README.md  char-rnn.c  generate_test.py  htif.ld  test.py
tests/src/: generate_test.py  generated.c  main.c  main.cpp  main_avx.c  main_fp16.c  main_matlib.c  unittest.h
(+278 files in other folders)
